Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48018

QML Flickable truncates contentX to signed 32-bits (0x80000000)

    XMLWordPrintable

Details

    • 96bd2337a98c892b5def555163c491507dce7185, 98aed8c76 (dev)

    Description

      QML Flickable will truncate contentX to 0x80000000 on mouse release or when animated movement crosses the 32-bit signed boundary of 0x7fffffff..0x80000000

      To reproduce:

      • load attached main.qml
      • mouse drag the blue rectangle to see the contentX changing around zero
      • click the orange button to set contentX to 0x80000000
      • mouse drag and see int64 large numbers are supported (contentX > 0x80000000)
      • release mouse with contentX > 0x80000000, contentX snaps back to 0x80000000
      • setup movement with contentX < 0x80000000, contentX snap halts at 0x80000000

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              srutledg Shawn Rutledge
              ianfield Ian Field
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes